--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^8.15.12",
     "framer-motion": "^12.16.0",
     "i18next": "^25.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.7.2",
     "react-router-dom": "^7.8.2",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
