--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "cool-animation-portfolio",
+  "name": "portfolio",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.7.4",
-    "@react-three/fiber": "^8.15.12",
-    "framer-motion": "^12.16.0",
+    "@react-three/fiber": "^9.3.0",
+    "framer-motion": "^12.23.12",
     "i18next": "^25.4.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-i18next": "^15.7.2",
     "react-router-dom": "^7.8.2",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "three": "^0.179.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.1.7"
   }
 }
