--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-i18next": "^15.7.2",
     "react-router-dom": "^7.8.2",
     "react-syntax-highlighter": "^15.6.6",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
